[package]
name = "darklands"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bracket-lib = { git = "https://github.com/alkumis/bracket-lib", branch = "update_to_bevy_15" }
bracket-bevy = { git = "https://github.com/alkumis/bracket-lib", branch = "update_to_bevy_15" }
rand = "0.9.0"

[workspace]
resolver = "2"
